AdobeStockImageAdminUi/view/adminhtml/web/css/source/_module.less
/**
 * Copyright © Magento, Inc. All rights reserved.
 * See COPYING.txt for license details.
 */

& when (@media-common = true) {
    .adobe-stock-images-search-modal-content {
        .masonry-image {
            &-grid {
                display: inline-block;
                width: 100%;
                margin: 0;
            }

            &-column {
                position: relative;
                overflow: visible;
            }

            &-overlay {
                right: 0;
            }

            &-preview {
                position: fixed;
                z-index: 299;

                .container {
                    padding-top: 0;

                    .preview-buttons {
                        /* Align image preview actions uniformly to the right edge */

                        .action-previous, .action-next, .action-close {
                            padding: 30px 0 30px 30px;
                        }
                    }

                    .preview-row-content {
                        img.preview {
                            flex-basis: auto;
                        }
                    }
                }
            }
        }

        .masonry-sorting {
            display: inline-block;

            select {
                border: none;
                background-image: url(../images/arrows-bg.svg);
                padding-right: 2.2rem;

                &:active {
                    background-image+: url('../images/arrows-bg.svg');
                }
            }
        }

        .masonry-results-number {
            display: inline-block;
            margin-right: 1.4rem;
        }

        .masonry-image-column {
            &:first-child .masonry-image-preview .preview-buttons .action-previous,
            &:last-child .masonry-image-preview .preview-buttons .action-next {
                opacity: .5;
                pointer-events: none;
            }
        }

        .adobe-login-container {
            .adobe-user-information {
                .adobe-user-popup {
                    .adobe-user-info {
                        padding-top: 15px;
                    }
                }
            }
        }

        .admin__action-dropdown-wrap._active .admin__action-dropdown-text::after {
            margin-right: 6px;
        }

        .admin__data-grid-action-bookmarks .admin__action-dropdown-menu {
            right: 0;
            left: auto;
        }

        .masonry-image-grid {
            + .admin__data-grid-header {
                .selectmenu-items {
                    bottom: 100%;
                    top: auto;
                }
            }
        }

        .masonry-image-preview {
            .title {
                font-weight: bold;
            }

            .info {
                float: left;
                min-width: 40%;
                padding-left: 40px;
                width: -moz-min-content;

                .actions {
                    letter-spacing: -1px;

                    button {
                        margin-right: 15px;
                    }
                }

                .title {
                    margin: 0 0 20px;
                }

                .author {
                    margin: 0 0 30px;
                }

                .action-buttons {
                    text-align: left;
                    margin: 0 0 30px;
                }
            }

            .related-container {
                height: 180px;
            }

            .attributes {
                .attribute {
                    display: inline-block;
                    margin-right: 2em;

                    .value {
                        margin-top: 1em;
                    }
                }
            }

            .keywords {
                margin: 30px 0 20px 0;
                display: inline-block;
                width: 100%;

                .title {
                    margin-bottom: 30px;
                }

                .keyword {
                    display: inline-block;
                    margin-right: 5px;
                    line-height: 40px;

                    &.hide {
                        display: none;
                    }

                    .value {
                        font-size: 15px;
                        text-transform: capitalize;
                        border: 1px solid #c6c1bb;
                        padding: 5px;
                        border-radius: 3px;
                        background-color: #f5f5f5;
                        color: #666666;
                    }
                }

                button {
                    margin-left: 10px;
                }
            }

            .adobe-stock-tabs {
                margin-top: 30px;
                border-bottom: 1px solid @color-gray68;

                .ui-state-default {
                    border-bottom: none;
                }
            }

            .related-loader {
                height: 100px;
                width: 100px;
                left: 50%;
                margin-left: -50px;
                top: 50%;
                margin-top: 50px;
            }

            .adobe-stock-related-images-tab-content {
                max-height: 190px;
                height: auto;
                vertical-align: middle;
                display: inline-block;
                width: 100%;

                .ui-tabs-panel {
                    margin-top: 30px;
                    padding: 0;

                    .thumbnail {
                        display: inline-flex;
                        justify-content: center;
                        position: relative;
                        height: 100px;
                        width: 150px;
                        overflow: hidden;
                        margin-right: 10px;
                        vertical-align: middle;

                        img {
                            position: absolute;
                            width: auto;
                            max-width: initial;
                        }
                    }

                    .see-more-wrapper {
                        display: inline-block;
                        max-height: 100px;
                        text-align: center;
                        max-width: 140px;
                        vertical-align: middle;
                        width: 100%;
                        cursor: pointer;

                        .see-more-content {
                            padding: 30px;

                            .three-dots {
                                margin-bottom: 10px;

                                .dots {
                                    content: "\22EE";
                                    display: inline-block;
                                    width: 10px;
                                    height: 10px;
                                    color: #fff;
                                    background-color: #626160;
                                    border-radius: 50%;
                                    line-height: 1;
                                    text-align: center;
                                }
                            }
                        }
                    }
                }
            }
        }

        .admin__form-field {
            .colorpicker-input {
                min-width: 70%;
            }
        }
    }

    //Start Save Prompt styling
    .adobe-stock-save-preview-prompt {
        .modal-inner-wrap {
            max-width: 650px;
            width: 100%;

            .modal-header {
                padding: 30px;

                .modal-title {
                    margin: 0;
                }

                .action-close {
                    right: 30px;
                    top: 30px;
                }
            }

            .modal-content {
                .prompt-message {
                    font-weight: normal;
                    margin-bottom: 15px;
                }

                .admin__field-wide {
                    margin-bottom: 0;
                }

                .image-ext {
                    position: absolute;
                    top: 0;
                    right: 0;
                    padding: 0.6rem 1rem 0.6rem;
                    color: #999;
                    cursor: default;
                }

                .admin__field-with-image-ext {
                    .admin__control-text {
                        padding-right: 5rem;
                    }
                }
            }

            .modal-footer {
                padding: 30px;

                .action-dismiss {
                    margin-right: 35px;
                    color: #464646;
                }
            }
        }
    }

    //End Save Prompt styling
    .admin__adobe-stock-image-checkbox {
        .admin__field-control._with-tooltip {
            .admin__form-field-label {
                display: inline-block;
            }

            .admin__field-tooltip {
                margin: -5px 0 0 5px;
            }
        }
    }
}

@media (max-width: 1024px) {
    .adobe-stock-images-search-modal-content {
        .masonry-image-preview {
            .container {
                margin: 0 60px;

                .preview-row-content {
                    .info {
                        .actions {
                            .action-secondary {
                                margin-bottom: 8px;
                            }
                        }
                    }
                }
            }
        }
    }
}

